fix: change width to avoid inputs overflow in metadata step

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -108,7 +108,7 @@ body {
               padding: 5px;
               margin: auto;
               @media screen and (max-width: 480px) {
-                width: 100%;
+                width: auto;
               }
             }
           }
